  o Added Paste Over function, which allows you to paste subtitle lines over others, overwriting the fields of your choice. (AMZ)
  o Scrollbar in grid didn't always allow scrolling through all the subs. (jfs)
  o Minor fix to the calculation of the grid's "Style" column width. (AMZ)
- Subtitles edit box changes:
  o The whole layout has been tweaked. (AMZ)
  o Replaced wxTextCtrl with wxStyledTextCtrl, to solve many issues related to the Rich Text edit control. (AMZ)
  o Improved Syntax Highlighter to include more features of ASS. (AMZ)
  o Added an inline Hunspell-based Spell Checker. (AMZ)
  o Added an inline MyThes-based Thesaurus. (AMZ)
  o Times can now be copy and pasted with Ctrl+C and Ctrl+V, as well as from context menu, in the time edit boxes. (AMZ)
  o Layer box replaced with a spin control in the subtitles edit box. (AMZ)
  o Commiting text now commits times as well. (AMZ)
  o Changes to text will no longer be discarded when you commit timing in the audio display and vice-versa. (AMZ)
  o Added a Call Tip feature to the edit box, so it shows the function prototype as you type it. (AMZ)
  o Fixed glitches related to the Duration time edit box. (AMZ)
  o Tweaked the behavior of the margin boxes, now they no longer show padding zeros. (AMZ)
  o Actor and Effect fields now show a "ghosted" caption saying their name when they are not focused on and blank. (AMZ)
  o Added a "Commit" button that duplicates the Enter/Ctrl+Enter functionality, since those shortcuts were not obvious to everyone. (AMZ)
- Changes to Fonts Collector:
  o Changed the font searching engine to something slower, but far more reliable. (jfs/AMZ)
  o Added option to just verify if you have the fonts. (AMZ)
  o You can now collect fonts directly to a zipped archive. (AMZ)
  o Fixed behavior of the Escape key in it. (AMZ)
  o Redesigned the interface and replaced the log window with a much better Scintilla control. (AMZ)